force-app/main/default/objects/fileforcem1__File_Uploaded__e/fileforcem1__File_Uploaded__e.object-meta.xml
<CustomObject>
    <description>Platform event that is sent when large files are uploaded to SharePoint.</description>
    <label>File Uploaded</label>
    <pluralLabel>File Uploaded</pluralLabel>
</CustomObject>