force-app/main/default/objects/fileforcem1__File_Uploaded__e/fields/fileforcem1__Custom_Fields_Info__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Custom_Fields_Info__c</fullName>
    <label>Custom Fields Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>