force-app/main/default/objects/fileforcem1__File_Uploaded__e/fields/fileforcem1__Event_Content__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Event_Content__c</fullName>
    <label>Event Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>