force-app/main/default/objects/fileforcem1__File_Uploaded__e/fields/fileforcem1__File_Name__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__File_Name__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>