force-app/main/default/objects/fileforcem1__File_Uploaded__e/fields/fileforcem1__Session_Id__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Session_Id__c</fullName>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>