force-app/main/default/objects/fileforcem1__File_Uploaded__e/fields/fileforcem1__Status__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>