force-app/main/default/objects/fileforcem1__File_Uploaded__e/fields/fileforcem1__User_Id__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__User_Id__c</fullName>
    <label>User Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>